--- a/zombunity_http/resource/zombunity.html
+++ b/zombunity_http/resource/zombunity.html
@@ -17,14 +17,14 @@
 <span id="conn-disconn-flg" style="color:red;">disconnected</span>
 <br><br>
 
-MUD Commands: <input id="mud-input" type="text" value=""/>
+MUD Commands: <input id="mud-input" type="text" value="" style="width:200px;" onkeyup="zombunity.gui.text_key_up(event);"/>
 
 <button onclick="zombunity.gui.send();">Send</button>
-<button onclick="zombunity.gui.text();">Add as text</button>
+<button onclick="zombunity.gui.debug_mode();">Debug Mode</button>
 
 <br>
 <br>
-Text: <textarea id="text">Some text to start</textarea>
+<textarea id="text" style="width:500px; height:500px;"></textarea>
 
 </body>
 </html>
