Added gui menu code that's _so_close_ to being done. Also added a debug mode to redirect the input field to the output field. Cleaned up the GUI. Flipped from textarea for ouput to DIV to allow for menu links.

--- a/zombunity_http/resource/zombunity.html
+++ b/zombunity_http/resource/zombunity.html
@@ -21,10 +21,11 @@ MUD Commands: <input id="mud-input" type="text" value="" style="width:200px;" on
 
 <button onclick="zombunity.gui.send();">Send</button>
 <button onclick="zombunity.gui.debug_mode();">Debug Mode</button>
+<button onclick="zombunity.gui.create_debug_menu();">Menu</button>
 
 <br>
 <br>
-<textarea id="text" style="width:500px; height:500px;"></textarea>
+<div id="text" style="width:500px; height:500px;border:1px solid green;"></div>
 
 </body>
 </html>
